--- a/site/package.json
+++ b/site/package.json
@@ -7,6 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "gridsome": "^0.7.0"
   }
 }
