--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                            <goal>npm</goal>
                        </goals>
                    </execution>
-                   <execution>
+                   <!-- <execution>
                        <id>npm run build</id>
                        <goals>
                            <goal>npm</goal>
@@ -57,7 +57,7 @@
                        <configuration>
                            <arguments>run build</arguments>
                        </configuration>
-                   </execution>
+                   </execution> -->
                </executions>
            </plugin>
          <plugin>
